# ZNBase

./: .gitignore  .gitlab-ci..yml.bak  .startCluster.sh.swp  CONTRIBUTING.md  Gopkg.toml  LICENSE  Makefile  README.md  clear_set.sh  cp_data.sh  exec_join.sh  load_tables.sh  modify_range.sh  set_BaseHash.sh  set_PRPD.sh  set_PnR.sh  startCluster.sh
.github/: bors.toml
c-deps/: .gitignore  libinjection-rebuild  libplsql-rebuild
c-deps/libplsql/: CMakeLists.txt  todo.md
c-deps/libplsql/cson/: cJSON.c
c-deps/libplsql/include/: htup.h  pl_python.h  plpgsql.h  postgres.h
c-deps/libplsql/include/common/: keywords.h
c-deps/libplsql/include/config/: pg_config.h
c-deps/libplsql/include/cson/: cJSON.h
c-deps/libplsql/include/mmg/: memutils.h
c-deps/libplsql/include/nodes/: memnodes.h  nodes.h  parsenodes.h
c-deps/libplsql/include/parser/: gramparse.h  parser.h  pl_unreserved_kwlist.h  pl_unreserved_kwlist_d.h  plerrcodes.h
c-deps/libplsql/include/plpython/: plpy_result.h  plpy_type.h
c-deps/libplsql/include/utils/: c.h  decoding.h  elog.h  hashmap.h  numeric.h  pg_config.h  pg_list.h  postgres_ext.h  stringinfo.h
c-deps/libplsql/include/znbase/: expr.h  fmgr.h  tuple.h  znbase.h
c-deps/libplsql/mmg/: aset.c  mcxt.c
c-deps/libplsql/parser/: kwlookup.c  parser.c  pl_gram.y  scan.c  scan.l  scansup.c
c-deps/libplsql/plpython/: plpy_result.c  plpy_type.c  python_depi.c  setup.py
c-deps/libplsql/plsql/: pl_comp.c  pl_exec.c  pl_funcs.c  pl_handler.c  pl_scanner.c
c-deps/libplsql/utils/: bepitime.c  bepitime.h  decoding.c  elog.c  hashmap.c  list.c  nodes.c  numeric.c  string.c  stringinfo.c
c-deps/libplsql/znbase/: expr.c  znbase.c
ci/: .gitlab-ci-bini.yml  .gitlab-ci-productization.yml  .gitlab-ci-sql.yml  .gitlab-ci-storage.yml  .gitlab-ci-txn.yml  cppcheck.sh  git-check.sh  gitlab-ci-replica.yml  suppressions.txt
docs/: README.md  cloud-resources.md  design.md  first-pr.md  style.md
licenses/: CCL.txt
monitoring/: prometheus.yml
node1/: 000012.sst  000017.sst  000052.sst  000054.sst  000096.sst  000104.sst  IDENTITY  MANIFEST-000007  MANIFEST-000055  MANIFEST-000092  MANIFEST-000099  OPTIONS-000005  OPTIONS-000095  cursor-temp-dirs-record.txt  temp-dirs-record.txt  znbase.advertise-addr  znbase.http-addr  znbase.listen-addr
node2/: 000006.sst  000017.sst  000053.sst  000055.sst  000073.sst  000075.sst  000084.sst  IDENTITY  MANIFEST-000007  MANIFEST-000056  MANIFEST-000076  MANIFEST-000079  OPTIONS-000005  OPTIONS-000079  cursor-temp-dirs-record.txt  temp-dirs-record.txt  znbase.advertise-addr  znbase.http-addr  znbase.listen-addr
node3/: 000017.sst  (+17 more)
(+4366 files in other folders)
